zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__vttest2_9.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"
---
00 (C): Push <RETURN>
01 (C): Jump scroll down region [1..24] size 24 Line 29
02 (C): Jump scroll down region [1..24] size 24 Line 28
03 (C): Jump scroll down region [1..24] size 24 Line 27
04 (C): Jump scroll down region [1..24] size 24 Line 26
05 (C): Jump scroll down region [1..24] size 24 Line 25
06 (C): Jump scroll down region [1..24] size 24 Line 24
07 (C): Jump scroll down region [1..24] size 24 Line 23
08 (C): Jump scroll down region [1..24] size 24 Line 22
09 (C): Jump scroll down region [1..24] size 24 Line 21
10 (C): Jump scroll down region [1..24] size 24 Line 20
11 (C): Jump scroll down region [1..24] size 24 Line 19
12 (C): Jump scroll down region [1..24] size 24 Line 18
13 (C): Jump scroll down region [1..24] size 24 Line 17
14 (C): Jump scroll down region [1..24] size 24 Line 16
15 (C): Jump scroll down region [1..24] size 24 Line 15
16 (C): Jump scroll down region [1..24] size 24 Line 14
17 (C): Jump scroll down region [1..24] size 24 Line 13
18 (C): Jump scroll down region [1..24] size 24 Line 12
19 (C): Jump scroll down region [1..24] size 24 Line 11
20 (C): Jump scroll down region [1..24] size 24 Line 10
21 (C): Jump scroll down region [1..24] size 24 Line 9
22 (C): Jump scroll down region [1..24] size 24 Line 8
23 (C): Jump scroll down region [1..24] size 24 Line 7
24 (C):                                                                                                               
25 (C):                                                                                                               
26 (C):                                                                                                               
27 (C):                                                                                                               
28 (C):                                                                                                               
29 (C):                                                                                                               
30 (C):                                                                                                               
31 (C):                                                                                                               
32 (C):                                                                                                               
33 (C):                                                                                                               
34 (C):                                                                                                               
35 (C):                                                                                                               
36 (C):                                                                                                               
37 (C):                                                                                                               
38 (C):                                                                                                               
39 (C):                                                                                                               
40 (C):
